[package]
name = "tauri-plugin-window-state"
version = "2.4.1"
description = "Save window positions and sizes and restore them when the app is reopened."
authors = ["Tauri Programme within The Commons Conservancy", "nakanishy"]
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.77.2"
repository = "https://github.com/nakanishy/window-state"
links = "tauri-plugin-window-state"

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }

[dependencies]
serde = "1"
serde_json = "1"
tauri = { version = "2.9.3", default-features = false }
log = "0.4"
thiserror = "2"
bitflags = "2"
